Fixes alignment of content to header on small screens

--- a/app/_scss/pages/_base.scss
+++ b/app/_scss/pages/_base.scss
@@ -149,7 +149,7 @@
 			}
 
 			article, .description, #paging, .cta {
-				padding-left: 1.8em;
+				padding-left: 18px;
 			}
 		}
 	}
